--- a/package.json
+++ b/package.json
@@ -34,5 +34,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {
+    "ajv": "^7.2.4",
+    "tailwindcss": "^3.4.11"
+  },
+  "author": "sabbir hossain",
+  "license": "ISC"
 }
